[tool.poetry]
name = "governor"
version = "0.1.0"
description = ""
authors = ["Kevin Wang <kevmo314@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
governor = "governor:main"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
torch = "^1.13.0"
aiohttp = "^3.8.3"
absl-py = "^1.3.0"
requests = "^2.28.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
